--- a/EShopping/EShopping/Views/Home/ProductStyle1Partial.cshtml
+++ b/EShopping/EShopping/Views/Home/ProductStyle1Partial.cshtml
@@ -11,17 +11,18 @@
 </div>
 
 <div class="section group">
-@foreach (var item in Model.Take(2))
+@foreach (var item in Model)
 {
     <div class="grid_1_of_4 images_1_of_4">
         @Html.DisplayFor(modelItem => item.ProductImg)
         <h2>@Html.DisplayFor(modelItem => item.ProductName)</h2>
         <div class="price-details">
             <div class="price-number">
-                <p><span class="rupees">"$"@Html.DisplayFor(modelItem => item.ProductQty)</span></p>
+                <p><span class="rupees">$@Html.DisplayFor(modelItem => item.ProductPrice)</span></p>
             </div>
             <div class="add-cart">
-                <h4><a href="#">Add to Cart</a></h4>
+                @* H4 Nút thêm *@
+                <h4><a href="@Url.Action("ThemGioHang", "ShoppingCart", new { @ProduceCode = item.ProduceCode, @strUrl = Request.Url.ToString()})">Add to Cart</a></h4>
             </div>
             <div class="clear"></div>
         </div>
