--- a/EShopping/EShopping/Views/Shared/_UserLayout.cshtml
+++ b/EShopping/EShopping/Views/Shared/_UserLayout.cshtml
@@ -35,16 +35,8 @@
                 <div class="logo">
                     <a href="#"><img src="~/Content/LibUser/images/logo.png" alt="" /></a>
                 </div>
-                <div class="cart">
-                    <p>
-                        Welcome to our Online Store! <span>Cart:</span><div id="dd" class="wrapper-dropdown-2">
-                            0 item(s) - $0.00
-                            <ul class="dropdown">
-                                <li>you have no items in your Shopping cart</li>
-                            </ul>
-                        </div>
-                    </p>
-                </div>
+                @* Chèn partialview giỏ hàng vào layout *@
+               @Html.Action("ShoppingPartial", "ShoppingCart")
                 <script type="text/javascript">
                     function DropDown(el) {
                         this.dd = el;
